FIX/PN-13457: add class to avoid page break on multiple recipients bilingual (#27)
* add class to avoid page break on element

* add class "page-break-avoid" on all recipient row

* avoid page break in template with a list of recipients

--- a/templates-assets/styles/index.css
+++ b/templates-assets/styles/index.css
@@ -161,3 +161,7 @@ a.faq-link-perfezionamento {
 .py-16 {
     padding: 21.333px 0;
 }
+
+.page-break-avoid {
+    page-break-inside: avoid;
+}
